--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
-  }
+  },
+  "proxy": "https://lc-auth-api.onrender.com/"
 }
